--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "parcel src/*.html"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.23.3"
   }
 }
