--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "build": "parcel src/*.html"
   },
   "devDependencies": {
+    "@vue/component-compiler-utils": "^3.0.2",
     "parcel-bundler": "^1.12.4",
-    "sass": "^1.23.3"
+    "sass": "^1.23.3",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "vue-hot-reload-api": "^2.3.4"
   }
 }
