--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/component-compiler-utils": "^3.0.2",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.23.3",
+    "stylus": "^0.54.7",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   },
