--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel src/*.html"
+    "build": "parcel build src/*.html"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
